Fixed some CSS with collapsed parameter, parameter name is bold, values have padding below

--- a/frontend/src/styles/components/builder/_Parameters.scss
+++ b/frontend/src/styles/components/builder/_Parameters.scss
@@ -92,3 +92,7 @@
 .value-set-field .Select {
   display: inline-block;
 }
+
+.heading-name{
+  font-weight: bold;
+}
